--- a/src/app/layouts/admin-layout/admin-layout.component.css
+++ b/src/app/layouts/admin-layout/admin-layout.component.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   height: 100%;
   margin: 0;
 }
@@ -54,4 +54,4 @@ footer {
   width: 18px;
   height: 18px;
   vertical-align: -0.25em;
-}
+} */
