--- a/src/app/layouts/public-products-list/public-products-list.component.css
+++ b/src/app/layouts/public-products-list/public-products-list.component.css
@@ -1,4 +1,4 @@
-
+/* 
 .card {
   border: 1px solid #e0e0e0;
   transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -36,4 +36,4 @@
 .btn-outline-primary:hover {
   background-color: #007bff;
   color: #fff;
-}
+} */
